page overflow fixed. now rounding menu borders

--- a/styles.css
+++ b/styles.css
@@ -33,6 +33,7 @@ h1, h2, p {
 .menu {
   width: 80%;
   background-color: burlywood;
+  border-radius: 25px;
   /* margin-left: auto;
   margin-right: auto; */
   padding: 20px;
